--- a/exercicios/capitulo_01/desafio_imprima_durma_imprima.ipynb
+++ b/exercicios/capitulo_01/desafio_imprima_durma_imprima.ipynb
@@ -11,6 +11,39 @@
     "1. Insira a função \"time.sleep\" e passe como argumento 4.5\n",
     "1. Imprima na tela \"Última linha do programa.\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, mundo!\n",
+      "Agora sou uma pessoa programadora!\n",
+      "Aguarde 4.5 segundos\n",
+      "Ultima linha do programa!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "print(\"Olá, mundo!\")\n",
+    "time.sleep(2)\n",
+    "print(\"Agora sou uma pessoa programadora!\")\n",
+    "print(\"Aguarde 4.5 segundos\")\n",
+    "time.sleep(4.5)\n",
+    "print(\"Ultima linha do programa!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -29,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
