Estrutura de dados

--- a/exercicios/capitulo_02/estrutura_dados.ipynb
+++ b/exercicios/capitulo_02/estrutura_dados.ipynb
@@ -8,10 +8,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie uma lista com um único tipo de dado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_numeros = [1, 2, 3]"
    ]
   },
   {
@@ -22,10 +40,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_mista = [13, 'lista', [4, 5, 7], True, lista_numeros]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Descubra o comprimento das listas criadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(lista_mista)"
    ]
   },
   {
@@ -36,10 +72,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tupla = (1, 3, 4, 5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie um conjunto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conjunto = {1, 2, 3, 4, 5, 2}\n",
+    "#Cada elemento do conjunto (set) é único, nao se repete e duplicatas são ignoradas\n",
+    "\n",
+    "len(conjunto)\n",
+    "5"
    ]
   },
   {
@@ -50,6 +108,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(conjunto)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,10 +124,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicionario = {'gato':'felino', 'legenda':5, 'cidade':'Recife', 'residente':True}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Imprima na tela o valor correspondente a uma das chaves do dicionário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.2' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "dicionario['gato']"
    ]
   }
  ],
@@ -72,7 +168,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.0"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
