--- a/exercicios/capitulo_02/classe_objetos.ipynb
+++ b/exercicios/capitulo_02/classe_objetos.ipynb
@@ -8,10 +8,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gato:\n",
+    "    def __init__(self):\n",
+    "        self.patas = 4\n",
+    "        self.cor = 'preta'\n",
+    "        self.nome = 'Frejat'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Defina um método para a classe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gato:\n",
+    "    def __init__(self):\n",
+    "        self.patas = 4\n",
+    "        self.cor = 'preta'\n",
+    "        self.nome = 'Tony'\n",
+    "\n",
+    "\n",
+    "    def som(self):\n",
+    "        print(self.nome + ' é um gato que mia.')"
    ]
   },
   {
@@ -22,10 +52,121 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meu_gato = Gato()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meu_gato_dois = Gato()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Execute o método"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tony é um gato que mia.\n"
+     ]
+    }
+   ],
+   "source": [
+    "meu_gato.som()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tony é um gato que mia.\n"
+     ]
+    }
+   ],
+   "source": [
+    "meu_gato_dois.som()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Alteração na função de inicialização"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gato:\n",
+    "    def __init__(self, nome = 'Tony'):\n",
+    "        self.patas = 4\n",
+    "        self.cor = 'preta'\n",
+    "        self.nome = nome\n",
+    "\n",
+    "\n",
+    "    def som(self):\n",
+    "        print(self.nome + ' é um gato que mia.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meu_gato = Gato()\n",
+    "meu_gato_dois = Gato('Frejat')\n",
+    "gato_shay = Gato('Maria')\n",
+    "gato_barbara = Gato('Fifi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tony é um gato que mia.\n",
+      "Frejat é um gato que mia.\n",
+      "Maria é um gato que mia.\n",
+      "Fifi é um gato que mia.\n"
+     ]
+    }
+   ],
+   "source": [
+    "meu_gato.som()\n",
+    "meu_gato_dois.som()\n",
+    "gato_shay.som()\n",
+    "gato_barbara.som()"
    ]
   }
  ],
@@ -36,8 +177,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
