--- a/exercicios/capitulo_04/dictionary_comprehension.ipynb
+++ b/exercicios/capitulo_04/dictionary_comprehension.ipynb
@@ -9,11 +9,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = ['floresta', 'riacho', 'cachoeira']"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando o recurso dictionary comprehension, crie um dicionário cuja a chave é o comprimento do item e o valor, o próprio item da lista.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'8': 'floresta', '6': 'riacho', '9': 'cachoeira'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicionario = {f'{len(item)}': item for item in lista}\n",
+    "dicionario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'8-f': 'floresta', '6-r': 'riacho', '9-c': 'cachoeira'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicionario = {f'{len(item)}-{item[0]}': item for item in lista}\n",
+    "dicionario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Seria o equivalente a:\n",
+    "dicionario={}\n",
+    "\n",
+    "for item in lista:\n",
+    "        dicionario[f'{len(item)}-{item[0]}'] =  item"
    ]
   },
   {
@@ -25,11 +89,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = ('céu', 'cinza')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "céu ---- cinza\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla = [('céu', 'cinza')]\n",
+    "for a, b in tupla:\n",
+    "    print(f'{a} ---- {b}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_tupla = [('céu', 'cinza'), ('gato', 'laranja'), ('mar', 'azul')]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando o recurso dictionary comprehension, crie um dicionário cuja a chave é o primeiro item da tupla e o valor, o segundo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'céu': 'cinza', 'gato': 'laranja', 'mar': 'azul'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicionario_tuplas = {chave: valor for (chave, valor) in lista_tupla}\n",
+    "dicionario_tuplas"
    ]
   },
   {
@@ -49,11 +171,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'céu': 'cinzacinza', 'gato': 'laranjalaranja', 'mar': 'azulazul'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicionario_modificado = {chave: (valor*2) for (chave,valor) in dicionario_tuplas.items()}\n",
+    "print(dicionario_modificado)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando o recurso dictionary comprehension, crie um dicionário só com chaves com commprimento menor ou igual a 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'céu': 'cinzacinza', 'mar': 'azulazul'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicionario_filtrado = {chave: valor for (chave,valor) in dicionario_modificado.items() if len(chave) <= 3}\n",
+    "print(dicionario_filtrado)\n"
    ]
   }
  ],
@@ -64,8 +222,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
