--- a/exercicios/capitulo_04/list_comprehension.ipynb
+++ b/exercicios/capitulo_04/list_comprehension.ipynb
@@ -9,11 +9,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [2, 4, 6, 7]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando list comprehension, multiplique cada item por 2 e armazene-os em uma nova lista\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8, 12, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_duplicada = [2 * item for item in lista]\n",
+    "print(lista_duplicada)"
    ]
   },
   {
@@ -25,11 +52,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_100 = list(range(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 20, 40, 60, 80]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_div20 = [item for item in lista_100 if item % 20 == 0]\n",
+    "\n",
+    "print(lista_div20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Seria o equivalente a:\n",
+    "for item in lista_100:\n",
+    "    if item % 20 == 0:\n",
+    "        lista_div20.append()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie uma string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto = 'O arco-íris é colorido, o Céu é azul, a Terra do meu quintal é marrom'"
    ]
   },
   {
@@ -41,12 +117,98 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def limpaTexto(palavra):\n",
+    "    return palavra.replace(',', '').lower()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o arco-íris é colorido o céu é azul a terra do meu quintal é marrom\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(limpaTexto(texto))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando list comprehension, crie uma lista com as palavras normalizadas a partir da função do item acima\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['o', 'arco-íris', 'é', 'colorido', 'o', 'céu', 'é', 'azul', 'a', 'terra', 'do', 'meu', 'quintal', 'é', 'marrom']\n"
+     ]
+    }
+   ],
+   "source": [
+    "palavras_texto = [limpaTexto(palavra) for palavra in texto.split()]\n",
+    "print(palavras_texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['O',\n",
+       " 'arco-íris',\n",
+       " 'é',\n",
+       " 'colorido,',\n",
+       " 'o',\n",
+       " 'Céu',\n",
+       " 'é',\n",
+       " 'azul,',\n",
+       " 'a',\n",
+       " 'Terra',\n",
+       " 'do',\n",
+       " 'meu',\n",
+       " 'quintal',\n",
+       " 'é',\n",
+       " 'marrom']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texto.split() #Se não informar um separador, os espaços em branco serão utilizados como.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -56,8 +218,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
