--- a/exercicios/capitulo_04/listas.ipynb
+++ b/exercicios/capitulo_04/listas.ipynb
@@ -9,11 +9,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range(10)       #Elemento final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range(25,30)    #Elemento Inicial e Final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range(0,10,2)   #Passo/Intervalo entre os elementos"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Conversa essa objeto para uma lista\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(15))"
    ]
   },
   {
@@ -25,11 +72,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = list(range(15))\n",
+    "print(lista)\n",
+    "\n",
+    "lista[2:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista[2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista[2:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista[0]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Insira um item no final da lista\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista.append(50)\n",
+    "print(lista)"
    ]
   },
   {
@@ -41,11 +137,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista[0] = 'sol'\n",
+    "print(lista)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Remova um dos itens da lista\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista.remove(50)\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista.pop()\n",
+    "print(lista)"
    ]
   },
   {
@@ -55,6 +181,59 @@
    "source": [
     "- Copie a lista para outra variável"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sol', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 'novo', 'novo', 'novo']\n",
+      "['sol', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 'novo', 'novo', 'novo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_copia = lista #Fazendo essa atribuição direta, ambas as listas estarão armazenadas no mesmo local da memória do computador.\n",
+    "\n",
+    "lista.append('novo') #Caso uma seja modificada, ambas serão alteradas.\n",
+    "\n",
+    "print(lista)\n",
+    "print(lista_copia)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sol', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 'novo', 'novo', 'novo']\n",
+      "['sol', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 'novo', 'novo', 'novo', 'mar']\n"
+     ]
+    }
+   ],
+   "source": [
+    "copia_correta = lista.copy()\n",
+    "lista.append('mar')\n",
+    "\n",
+    "print(copia_correta)\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -64,8 +243,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
