--- a/exercicios/capitulo_04/sets_e_tuplas.ipynb
+++ b/exercicios/capitulo_04/sets_e_tuplas.ipynb
@@ -1,11 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- lista = []\n",
+    "- conjunto = {}\n",
+    "- tuplas = ()\n",
+    "\n",
+    "- Conjuntos(sets) não são ordenados e não possuem índices, são acessíveis diretamente pelos seus valores\n",
+    "- Tuplas são semelhantes a listas, porém não é possível modificar seus elementos, eles são ordenados. Acessíveis pelos índices, porém não modificá-los"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Crie um conjunto\n"
+    "- Crie um conjunto (sets)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'grama', 'cachoeira', 'sol'}\n",
+      "{'grama', 'cachoeira', 'sol'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "conjunto = {'grama', 'sol', 'cachoeira'}\n",
+    "print(conjunto)\n",
+    "\n",
+    "conjunto_rep = {'sol', 'grama', 'sol', 'cachoeira'}\n",
+    "print(conjunto_rep)\n",
+    "\n",
+    "#Conjuntos são valores UNICOS"
    ]
   },
   {
@@ -17,11 +54,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "conjunto_numeros = set(range(10))\n",
+    "print(conjunto_numeros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'b', 'a']\n",
+      "{'b', 'a', 'c'}\n",
+      "['b', 'a', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = ['a', 'b', 'c', 'b', 'a']\n",
+    "print(lista)\n",
+    "\n",
+    "#Lista convertida em conjunto (lembrando que são os valores únicos)\n",
+    "conjunto_lista = set(lista)\n",
+    "print(conjunto_lista)\n",
+    "\n",
+    "#Convertendo novamente em lista\n",
+    "lista = list(conjunto_lista)\n",
+    "print(lista)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Insira novos valores no conjunto\n"
+    "- Insira novos valores no conjunto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'grama', 'cachoeira', 'sol', 'pomar'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "conjunto.add('pomar')\n",
+    "print(conjunto)"
    ]
   },
   {
@@ -33,11 +134,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'grama', 'cachoeira', 'pomar'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "conjunto.discard('sol')\n",
+    "print(conjunto)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Verifique se um elemento está contino no conjunto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'grama' in conjunto"
    ]
   },
   {
@@ -49,11 +188,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tupla = ()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Imprima na tela um elemento da tupla\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla = (False, True, True, False)\n",
+    "\n",
+    "print(tupla[3])\n",
+    "\n",
+    "#tupla[3] = True //Dará Erro, pois não é possível modificar !"
    ]
   },
   {
@@ -65,11 +234,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estacoesAno():\n",
+    "    return 'primavera', 'verao', 'outono', 'inverno'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(estacoesAno())"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Atribua cada elemento da função em uma variável"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primavera\n",
+      "verao\n",
+      "outono\n",
+      "inverno\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c, d = estacoesAno()\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)"
    ]
   }
  ],
@@ -80,8 +303,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
