--- a/exercicios/capitulo_04/dicionarios.ipynb
+++ b/exercicios/capitulo_04/dicionarios.ipynb
@@ -9,11 +9,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "material_escritorio = {\n",
+    "    'escreve':'lápis',\n",
+    "    'apaga':'borracha',\n",
+    "    'armazena':'caderno'\n",
+    "}"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Faza uma lista com as chaves do dicionário criado\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['escreve', 'apaga', 'armazena']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(material_escritorio.keys())"
    ]
   },
   {
@@ -25,11 +58,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['lápis', 'borracha', 'caderno'])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "material_escritorio.values()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Localize o valor correspondente a uma chave do dicionário\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'borracha'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "material_escritorio['apaga']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Altere o valor de uma chave no dicionário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'escreve': 'lápis', 'apaga': 'corretivo', 'armazena': 'caderno'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "material_escritorio['apaga'] = 'corretivo'\n",
+    "print(material_escritorio)"
    ]
   },
   {
@@ -41,11 +139,27 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'escreve': 'lápis',\n",
+       " 'apaga': 'corretivo',\n",
+       " 'armazena': 'caderno',\n",
+       " 'prende': 'clip'}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "- Usando o módulo collections, crie um dicionário cujos o valor padrão serão listas\n"
+    "material_escritorio['prende'] = 'clip'\n",
+    "material_escritorio"
    ]
   },
   {
@@ -57,11 +171,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'escreve': 'lápis',\n",
+       " 'apaga': 'corretivo',\n",
+       " 'armazena': 'caderno',\n",
+       " 'prende': 'clip',\n",
+       " 'organiza': ['agenda', 'kanban']}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "material_escritorio['organiza'] = ['agenda', 'kanban']\n",
+    "material_escritorio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'escreve': 'lápis',\n",
+       " 'apaga': 'corretivo',\n",
+       " 'armazena': 'caderno',\n",
+       " 'prende': 'clip',\n",
+       " 'organiza': ['agenda', 'kanban', 'pasta']}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "material_escritorio['organiza'].append('pasta')\n",
+    "material_escritorio"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Usando o módulo collections, crie um dicionário cujos o valor padrão serão listas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {})"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "natureza = defaultdict(list)\n",
+    "natureza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {'fauna': ['arara', 'capivara', 'jacaré', 'macaco']})"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "natureza['fauna'].extend(['arara', 'capivara', 'jacaré', 'macaco'])\n",
+    "natureza"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Localize um valor da lista correspondente a uma chave do dicionário de listas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jacaré'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "natureza['fauna'][2]"
    ]
   }
  ],
@@ -72,8 +307,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
