--- a/exercicios/capitulo_05/if_elif_else.ipynb
+++ b/exercicios/capitulo_05/if_elif_else.ipynb
@@ -9,6 +9,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = list(range(30))\n",
+    "\n",
+    "print(lista)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -17,11 +36,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20 Esse número é igual a 20.\n",
+      "21 Esse número é maior que 20.\n",
+      "22 Esse número é maior que 20.\n",
+      "23 Esse número é maior que 20.\n",
+      "24 Esse número é maior que 20.\n",
+      "25 Esse número é maior que 20.\n",
+      "26 Esse número é maior que 20.\n",
+      "27 Esse número é maior que 20.\n",
+      "28 Esse número é maior que 20.\n",
+      "29 Esse número é maior que 20.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in lista:\n",
+    "    if n == 20:\n",
+    "        print(f'{n} Esse número é igual a 20.')    \n",
+    "    elif n < 20:\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        print(f'{lista[n]} Esse número é maior que 20.')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie as seguintes variáveis contendo listas vazias: ate_12, entre_13_e_20, maior_21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ate_12 = []\n",
+    "entre_13_e_20 = []\n",
+    "maior_21 = []"
    ]
   },
   {
@@ -35,6 +117,43 @@
     "3. se o número for maior do 21, armazene-o na lista maior_21\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "[21, 22, 23, 24, 25, 26, 27, 28, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in lista:\n",
+    "    if n <= 12:\n",
+    "        ate_12.append(n)\n",
+    "    elif n > 12 and n <= 20:\n",
+    "        entre_13_e_20.append(n)\n",
+    "    elif n > 20:\n",
+    "        maior_21.append(n)\n",
+    "\n",
+    "\n",
+    "print(ate_12)\n",
+    "print(entre_13_e_20)\n",
+    "print(maior_21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -44,8 +163,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
